--- a/04-dialog/meson.build
+++ b/04-dialog/meson.build
@@ -3,7 +3,7 @@ project('dialog', 'c')
 win = import('windows')
 
 res = win.compile_resources('dialog.rc',
-  depend_files: ['sun.bmp', 'moon.bmp', 'rcCursor.cur', 'rcIcon.ico', 'Small.ico'],
+  depend_files: ['rcIcon.ico', 'Small.ico'],
   include_directories : include_directories('.'),
   args : [['-DFOO'], '-DBAR']
 )
