--- a/11-listbox/listbox.rc
+++ b/11-listbox/listbox.rc
@@ -1,10 +1,10 @@
-
 #include <windows.h>
 #include "listbox.h"
 
-//
-SMALL
-LISTBOXICON
+// 资源文件是utf8编码
+#pragma code_page(65001)
+
+LISTBOXICON ICON DISCARDABLE "ListBox.ico"
 
 //Menu
 LISTBOXMENU MENU DISCARDABLE
@@ -21,7 +21,8 @@ BEGIN
         MENUITEM "设置字体颜色(&C)",            IDM_SELECTFONTCOLOR
     END
     POPUP "帮助(&H)"
-        MENUITEM "关于(&A)",            IDM_ABOUT
+    BEGIN
+        MENUITEM "关于(&A)...", IDM_ABOUT
     END
 END
 
@@ -29,7 +30,8 @@ END
 ABOUTBOX DIALOG DISCARDABLE 20, 25, 124, 77
 STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "列表框示范程序"
-FONT 10, "System", 0, 0, 0x1
+//FONT 10, "System", 0, 0, 0x1
+FONT 10, "宋体"
 BEGIN
     PUSHBUTTON    "确定",             IDOK,       43, 51, 40, 14
     CTEXT         "请通过列表框来设置文字的\n字体、风格和倾斜角", IDC_STATIC, 5, 6,109, 21,0, WS_EX_DLGMODALFRAME
@@ -42,7 +44,7 @@ END
 SELECTFONTFACEDLGBOX DIALOGEX 0, 0, 175, 99
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "选择字体字样"
-FONT 10, "System"
+FONT 10, "宋体"
 BEGIN
     DEFPUSHBUTTON   "确定",                     IDOK,          118, 56, 50, 14
     PUSHBUTTON      "取消",                     IDCANCEL,      118, 78, 50, 14
@@ -55,7 +57,7 @@ END
 SELECTFONTSTYLEDLGBOX DIALOGEX 0, 0, 168, 98
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "选择字体风格"
-FONT 10, "System"
+FONT 10, "宋体"
 BEGIN
     DEFPUSHBUTTON   "确定",                     IDOK,          15, 73, 50, 14
     PUSHBUTTON      "取消",                     IDCANCEL,      92, 73, 50, 14
@@ -66,7 +68,7 @@ END
 SELECTFONTORIENTDLGBOX DIALOGEX 0, 0, 187, 111
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "选择字体方向"
-FONT 10, "System"
+FONT 10, "宋体"
 BEGIN
     DEFPUSHBUTTON   "确定",                     IDOK,          15, 82, 50, 14
     PUSHBUTTON      "取消",                     IDCANCEL,      117, 81, 50, 14
@@ -76,9 +78,9 @@ END
 SELECTFONTCOLORDLGBOX DIALOGEX 0, 0, 134, 98
 STYLE   DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "选择字体颜色"
-FONT 10, "System"
+FONT 10, "宋体"
 BEGIN
     DEFPUSHBUTTON   "确定",                     IDOK,          14, 66, 50, 14
     PUSHBUTTON      "取消",                     IDCANCEL,      75, 66, 50, 14
-    LISTBOX                                     IDL_FONTCOLOR, 29, 8, 66, 49, LBS_SORT | LBS_OWNERDRAWFMIXED | LBS_HASSTRINGS | LBS_USETABSTOPS | LBS_WANTKEYBOARDINPUT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX                                     IDL_FONTCOLOR, 29, 8, 66, 49, LBS_SORT | LBS_OWNERDRAWFIXED | LBS_HASSTRINGS | LBS_USETABSTOPS | LBS_WANTKEYBOARDINPUT | WS_VSCROLL | WS_TABSTOP
 END
