--- a/13-combobox/combobox.rc
+++ b/13-combobox/combobox.rc
@@ -1,9 +1,12 @@
 #include <windows.h>
+#include <winnls.h>
 #include "resource.h"
 
+/* UTF-8 */
+#pragma code_page(CP_UTF8)
+
 //Icon
-SMALL       ICON DISCARDABLE "Small.ico"
-EDITBOXICON ICON DISCARDABLE "rcIcon.ico"
+ABOUTDIALOGICON ICON DISCARDABLE "about.ico"
 
 // Menu
 EDITBOXMENU MENU DISCARDABLE
@@ -31,11 +34,11 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "关于组合框控件示范程序"
 FONT 12,"宋体"
 BEGIN
-    PUSHBUTTON "确定"，IDOK, 43,51,40,14
-    CTEXT "组合框示范程序"，IDC_STATIC, 22,9,92,8
+    PUSHBUTTON "确定", IDOK, 43,51,40,14
+    CTEXT "组合框示范程序", IDC_STATIC, 22,9,92,8
     CTEXT "柳永新编写", IDC_STATIC, 30,24,76,10, NOT WS_GROUP
     CTEXT "一九九六年九月", IDC_STATIC, 36,37,65,8, NOT WS_GROUP
-    ICON "EditBoxICON", IDC_STATIC, 11,23,18,20
+    ICON "AboutDialogICON", IDC_STATIC, 11,23,18,20
     CONTROL "", IDC_STATIC, "Static", SS_BLACKFRAME,40,34,56,1
 END
 
@@ -44,8 +47,8 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION |  WS_SYSMENU
 CAPTION"选择字体字样"
 FONT 10, "System"
 BEGIN
-    DEFPUSHBUTTON "确定"，IDOK, 9,93,50,14
-    PUSHBUTTON "取消"，IDCANCEL,76,92,50,14
+    DEFPUSHBUTTON "确定", IDOK, 9,93,50,14
+    PUSHBUTTON "取消", IDCANCEL, 76,92,50,14
     LTEXT "可选用的 True Type字体:", IDC_STATIC, 13,5,84,8
     COMBOBOX IDC_FONTFACE, 15, 25,95,64, CBS_SIMPLE | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
@@ -55,20 +58,20 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "选择字体风格"
 FONT 10,"System"
 BEGIN
-    DEFPUSHBUTTON "确定"， IDOK,15,73,50,14
-    PUSHBUTTON "取消"，IDCANCEL,92,73,50,14
+    DEFPUSHBUTTON "确定", IDOK, 15,73,50,14
+    PUSHBUTTON "取消", IDCANCEL, 92,73,50,14
     LISTBOX IDL_FONTSTYLE,52,22,43,45, LBS_MULTIPLESEL | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT "请从下面列表框中选择字体风格(可多选):", IDC_STATIC, 12,7, 143,8
 END 
 
-SELECTFONTORIENTDLGBOX DIALOG DISCARDABLE O,0,138, 74
+SELECTFONTORIENTDLGBOX DIALOG DISCARDABLE 0, 0,138, 74
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION"设置字体方向"
 FONT 10, "System"
 BEGIN
-    DEFPUSHBUTTON "确定"，IDOK, 22,46,42,14
-    PUSHBUTTON "取消"，IDCANCEL, 85,47,39,14
-    COMBOBOX IDC_FONTORIENT, 43,27,48,94, CBS DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON "确定", IDOK, 22,46,42,14
+    PUSHBUTTON "取消", IDCANCEL, 85,47,39,14
+    COMBOBOX IDC_FONTORIENT, 43,27,48,94, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT "请从下面的组合框中选择字体基准线的倾斜方向:", IDC_STATIC,18,3,89,20
 END
 
