--- a/13-combobox/combobox.rc
+++ b/13-combobox/combobox.rc
@@ -3,7 +3,8 @@
 #include "resource.h"
 
 /* UTF-8 */
-#pragma code_page(CP_UTF8)
+//#pragma code_page(CP_UTF8)
+#pragma code_page(65001)
 
 //Icon
 ABOUTDIALOGICON ICON DISCARDABLE "about.ico"
@@ -53,10 +54,10 @@ BEGIN
     COMBOBOX IDC_FONTFACE, 15, 25,95,64, CBS_SIMPLE | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
-SELECTFONTSTYLEDLGB0X DIALOG DISCARDABLE 0, 0, 168, 98
+SELECTFONTSTYLEDLGBOX DIALOG DISCARDABLE 0, 0, 168, 98
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "选择字体风格"
-FONT 10,"System"
+FONT 10,"宋体"
 BEGIN
     DEFPUSHBUTTON "确定", IDOK, 15,73,50,14
     PUSHBUTTON "取消", IDCANCEL, 92,73,50,14
@@ -67,7 +68,7 @@ END
 SELECTFONTORIENTDLGBOX DIALOG DISCARDABLE 0, 0,138, 74
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION"设置字体方向"
-FONT 10, "System"
+FONT 10, "宋体"
 BEGIN
     DEFPUSHBUTTON "确定", IDOK, 22,46,42,14
     PUSHBUTTON "取消", IDCANCEL, 85,47,39,14
@@ -78,10 +79,10 @@ END
 SELECTFONTCOLORDLGBOX DIALOGEX 0, 0,129,83
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION"设置字体颜色"
-FONT 10,"System"
+FONT 10,"宋体"
 BEGIN
     DEFPUSHBUTTON "确定", IDOK, 13,57,42,14
-    PUSHBUTTON    "取消",   IDCANCEL, 74,57,41,142
-    COMBOBOX   IDC_FONTCOLOR,19,28,77,62, CBS_DROPDOWNLIST | CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP, WS_EX_RIGHT
+    PUSHBUTTON    "取消",   IDCANCEL, 74,57,41,14
+    COMBOBOX   IDC_FONTCOLOR, 19,28,77,62, CBS_DROPDOWNLIST | CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP, WS_EX_RIGHT
     LTEXT "请从下面的组合框中选择字体颜色:", IDC_STATIC,18,3,92,22
 END
