--- a/windesk/resource.rc
+++ b/windesk/resource.rc
@@ -1,11 +1,10 @@
 #include <windows.h>
-#include <winnls.h>
 #include <winuser.h>
 
 #include "resource.h"
 
 /* UTF-8 */
-#pragma code_page(CP_UTF8)
+#pragma code_page(65001)
 
 #define REACTOS_STR_FILE_DESCRIPTION  "ReactOS Registry Explorer"
 #define REACTOS_STR_INTERNAL_NAME     "regedit"
@@ -23,7 +22,7 @@ CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "manifest.xml"
 /* 字符串表 */
 STRINGTABLE
 BEGIN
-    IDS_DIALOG_INFO        "Info"
+    IDS_DIALOG_INFO        "信息"
     IDS_DIALOG_ERROR       "Error"
     IDS_DIALOG_WARNING     "Warning"
     IDS_DIALOG_QUESTION    "Question"
