--- a/14-statbar/statbar.rc
+++ b/14-statbar/statbar.rc
@@ -1,12 +1,14 @@
-#include "resource.h"
+//#include "resource.h"
 #include "windows.h"
 #include "winuser.h"
 #include "statbar.h"
 
-// Icon
-SMALL ICON DISCARDABLE "Small.ico"
+/* UTF-8
+ * maybe mingw does not support code_page(CP_UTF8) style */
+#pragma code_page(65001)
 
-STATUSBARICON ICON DISCARDABLE "rcIcon.ico"
+// Icon
+STATUSBARICON ICON DISCARDABLE "about.ico"
 
 // Menu
 STATUSBARMENU MENU DISCARDABLE
@@ -28,7 +30,7 @@ BEGIN
     END
     POPUP"显示(&V)"
     BEGIN
-        MENUITEM "显示状态栏(&S)", IDM_SHOWSTATUSBA, CHECKED
+        MENUITEM "显示状态栏(&S)", IDM_SHOWSTATUSBAR, CHECKED
     END
     POPUP "格式(&M)"
     BEGIN
@@ -43,27 +45,27 @@ BEGIN
     END
     POPUP "字体(&T)"
     BEGIN
-        MENUITEM"选择字体(&F)...", IDM_SELECTFONTFACE
-        MENUITEM"设置字体尺寸(&Z)...", IDM_SELECTFONTSIZE
+        MENUITEM "选择字体(&F)...", IDM_SELECTFONTFACE
+        MENUITEM "设置字体尺寸(&Z)...", IDM_SELECTFONTSIZE
     END
     POPUP "帮助(&H)"
     BEGIN
-        MENUITEM"关于(&A)..:", IDM_ABOUT
+        MENUITEM "关于(&A)..:", IDM_ABOUT
     END
 END
 
 // Dialog 11
 ABOUTBOX DIALOG DISCARDABLE 20, 25,124,77
-STYLE DS_MODALFRAME | WS_POPUPIWSVISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "关于应用状态栏的程序示范"
 FONT 14,"隶书_GB2312"
 BEGIN
-    PUSHBUTTON "确定"，IDOK,43,51,40,14
-    CTEXT "状态栏示范程序"，IDC_STATIC,22,9,92,8
-    CTEXT "柳永新编写"， IDC_STATIC,30,24,76,10, NOT WS_GROUP
-    CTEXT "一九九六年十月"，IDC_STATIC,36,37,65,8,NOT WS_GROUP
-    ICON "StatusBarICON", IDC_STATIC,11,23,18,20
-    CONTROL "", IDC_STATIC,"Static", SS_BLACKFRAME, 40,34,56,1
+    PUSHBUTTON "确定", IDOK, 43, 51, 40, 14
+    CTEXT "状态栏示范程序", IDC_STATIC, 22, 9, 92, 8
+    CTEXT "柳永新编写", IDC_STATIC, 30, 24, 76, 10, NOT WS_GROUP
+    CTEXT "一九九六年十月", IDC_STATIC, 36, 37, 65, 8, NOT WS_GROUP
+    ICON "StatusBarICON", IDC_STATIC, 11, 23, 18, 20
+    CONTROL "", IDC_STATIC, "Static", SS_BLACKFRAME, 40, 34, 56, 1
 END
 
 SELECTFONTFACEDLGBOX DIALOG DISCARDABLE 0,0, 140,117
@@ -71,9 +73,9 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION| WS_SYSMENU
 CAPTION"选择字体"
 FONT 10, "System"
 BEGIN
-    DEFPUSHBUTTON "确定"，IDOK,9,93,50,14
-    PUSHBUTTON "取消"，IDCANCEL,76,92,50,14
-    LTEXT "可选择的True Type字体:",IDC_STATIC,13,5,84,8
+    DEFPUSHBUTTON "确定", IDOK,9,93,50,14
+    PUSHBUTTON "取消", IDCANCEL,76,92,50,14
+    LTEXT "可选择的True Type字体:", IDC_STATIC,13,5,84,8
     COMBOBOX IDC_FONTFACE, 15,25,95,64, CBS_SIMPLE | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
@@ -82,17 +84,15 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "设置字体尺寸"
 FONT 10, "Svstem", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON "确定"，IDOK, 13, 57,50,14
-    PUSHBUTTON "取消"，IDCANCEL, 74, 57, 50, 14
+    DEFPUSHBUTTON "确定", IDOK, 13, 57,50,14
+    PUSHBUTTON "取消", IDCANCEL, 74, 57, 50, 14
     COMBOBOX IDC_FONTSIZE, 19, 13, 54, 62, CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP, WS_EX_RIGHT
 END
 
-
 //Bitmap
-
-ALIGNLEFT BITMAP DISCARDABLE "Left.bmp"
-ALIGNCENTER BITMAP DISCARDABLE "Center.bmp"
-ALIGNRIGHT BITMAP DISCARDABLE "Right.bmp"
+ALIGNLEFT BITMAP DISCARDABLE "left.bmp"
+ALIGNCENTER BITMAP DISCARDABLE "center.bmp"
+ALIGNRIGHT BITMAP DISCARDABLE "right.bmp"
 
 // String Table
 STRINGTABLE DISCARDABLE
