--- a/000-wine-cn-fonts/meson.build
+++ b/000-wine-cn-fonts/meson.build
@@ -1,4 +1,4 @@
-project('winmaincpp', 'c')
+project('wine-cn-fonts', 'c')
 
 add_global_link_arguments('-municode', language:  ['c', 'cpp'])
 cc = meson.get_compiler('c')
@@ -7,7 +7,7 @@ root = meson.get_external_property('root')
 
 lib_shlwapi = cc.find_library('shlwapi',  dirs : [root])
 
-main= executable('main',
+main= executable('wine-cn-fonts',
     'main.c',
     dependencies: [lib_shlwapi],
 )
